Html__more_finish

--- a/more.html
+++ b/more.html
@@ -35,6 +35,132 @@
           </div>
         </div>
       </header>
+
+      <main class="more">
+          <header class="more__header">
+            <div class="more__header__profile">
+              <img src="images/avatar.jpg" alt="">
+              <div class="more__header__info">
+                <h3 class="header__title">
+                  Columbus(Junsu) Kim
+                </h3>
+                <span class="more__header__subtitle">
+                  banjag954@naver.com
+                </span>
+              </div>
+            </div>
+            <i class="fas fa-comment fa-2x"></i>
+          </header>
+          <section class="more__options">
+            <div class="more__option">
+              <i class="far fa-grin-squint-tears fa-2x"></i>
+              <span class="more__option-title">
+                Emoticons
+              </span>
+            </div>
+            <div class="more__option">
+              <i class="fas fa-paint-roller fa-2x"></i>
+              <span class="more__option-title">
+                Themes
+              </span>
+            </div>
+            <div class="more__option">
+              <i class="far fa-hand-peace fa-2x"></i>
+              <span class="more__option-title">
+                Plus Friend
+              </span>
+            </div>
+            <div class="more__option">
+              <i class="far fa-user-circle fa-2x"></i>
+              <span class="more__option-title">
+                Account
+              </span>
+            </div>
+          </section>
+          <section class="more__plus-friends">
+            <header class="plus-friends__header">
+              <h2 class="plus-friends__title">
+                Plus Friends
+              </h2>
+              <span class="plus-friends__learn-more">
+                <i class="fas fa-info-circle"></i>
+                Learn More
+              </span>
+            </header>
+            <div class="plus-friends__items">
+              <div class="plus-friends__item">
+                <i class="fas fa-utensils"></i>
+                <div class="plus-friends__item--title">
+                  Order
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="fas fa-store-alt"></i>
+                <div class="plus-friends__item--title">
+                  Store
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="fas fa-tv"></i>
+                <div class="plus-friends__item--title">
+                  TV Channel/Radio...
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="fas fa-pencil-ruler"></i>
+                <div class="plus-friends__item--title">
+                  Creation
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="fas fa-graduation-cap"></i>
+                <div class="plus-friends__item--title">
+                  Education
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="fas fa-university"></i>
+                <div class="plus-friends__item--title">
+                  Politics/Society
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="far fa-credit-card"></i>
+                <div class="plus-friends__item--title">
+                  Finance
+                </div>
+              </div>
+              <div class="plus-friends__item">
+                <i class="fas fa-headphones-alt"></i>
+                <div class="plus-friends__item--title">
+                  Movies/Music
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="more__options">
+            <div class="more__option">
+              <img src="images/kakaoStory.png" alt="kakaoStory" class="more__option--image">
+              <span class="more__option--title">
+                KaKao Story
+              </span>
+            </div>
+            <div class="more__option">
+              <img src="images/path.png" alt="path" class="more__option--image">
+              <span class="more__option--title">
+                Path
+              </span>
+            </div>
+            <div class="more__option">
+              <img src="images/kakaoFriends.png" alt="kakaoFriends" class="more__option--image">
+              <span class="more__option--title">
+                KaKao Friends
+              </span>
+            </div>
+          </section>
+
+
+      </main>
       <nav class="top__bar">
         <a href="index.html" class="top__bar__tab">
           <i class="fas fa-user"></i>
