Html__Chat_finish

--- a/chats.html
+++ b/chats.html
@@ -42,25 +42,31 @@
           </div>
 
           <ul class="chats__list">
-            <li class=chats__chat>
-              <div class="chats__contents">
-                <img src="images/avatar.jpg" alt="user_image">
-                <div class="chat__preview">
-                  <h3 class="chat__user">Col Kim</h3>
-                  <span class="chat__last-massage">Hello! This is a test massage.</span>
+
+            <li class="chats__chat">
+              <a href="chat.html">
+                <div class="chats__contents">
+                  <img src="images/avatar.jpg" alt="user_image">
+                  <div class="chat__preview">
+                    <h3 class="chat__user">Col Kim</h3>
+                    <span class="chat__last-massage">Hello! This is a test massage.</span>
+                  </div>
+                  <span class="chat__date">17:55</span>
                 </div>
-              <span class="chat__date">17:55</span>
-              </div>
+              </a>
             </li>
-            <li class=chats__chat>
-              <div class="chats__contents">
-                <img src="images/avatar.jpg" alt="user_image">
-                <div class="chat__preview">
-                  <h3 class="chat__user">KakaoTalk</h3>
-                  <span class="chat__last-massage">You logged into KakaoTalk PC in the PC</span>
+
+            <li class="chats__chat">
+              <a href="chat.html">
+                <div class="chats__contents">
+                  <img src="images/avatar.jpg" alt="user_image">
+                  <div class="chat__preview">
+                    <h3 class="chat__user">KakaoTalk</h3>
+                    <span class="chat__last-massage">You logged into KakaoTalk PC in the PC</span>
+                  </div>
+                  <span class="chat__date">July 29</span>
                 </div>
-              <span class="chat__date">July 29</span>
-              </div>
+              </a>
             </li>
           </ul>
 
