--- a/chat.html
+++ b/chat.html
@@ -35,6 +35,49 @@
             <i class="fas fa-bars fa-lg"></i>
           </div>
         </div>
+
       </header>
+      <main class="chat">
+
+          <div class="date-divider">
+            <span class="date-divider__text">
+              Wendnesday, August
+            </span>
+          </div>
+
+          <div class="chat__message chat__message--from-me">
+            <span class="chat__message-time">
+              17:55
+            </span>
+            <span class="chat__message-body">
+              Hello! This is a test message.
+            </span>
+          </div>
+
+          <div class="chat__message chat__message--to-me">
+            <img src="images/avatar.jpg" alt="my image" class="chat__message-userImage">
+            <div class="chat__message-center">
+              <h3 class="chat__message-username">Col Kim</h3>
+              <span class="chat__message-body">
+                And this is an answer
+              </span>
+            </div>
+            <span class="chat__message-time">
+              19:30
+            </span>
+          </div>
+      </main>
+
+      <div class="type-message">
+        <i class="fas fa-plus fa-2x"></i>
+        <div class="type-message__input">
+          <input type="text" name="" value="">
+          <i class="far fa-smile"></i>
+          <span class="record-message">
+            <i class="fas fa-microphone"></i>
+          </span>
+        </div>
+      </div>
+
     </body>
     </html>
