Html__Structure_finish

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <i class="fab fa-bluetooth-b"></i>
             <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
           </div>
+        </div>
         <div class="header__bottom">
           <div class="header__column">
             <span class="header__text">Manager</span>
@@ -45,12 +46,14 @@
           <h6 class="friends__section--title">My Profile</h6>
           <div class="friends__section--rows">
             <div class="friends__section--row">
-              <img src="" alt="">
-              <span class="friends__section--name">Junsu Kim</span>
+              <a href="profile.html">
+                <img src="" alt="">
+                <span class="friends__section--name">Junsu Kim</span>
+              </a>
             </div>
             <div class="friends__section--row">
               <img src="" alt="">
-              <span class="friends__section--name">Freinds' Names Display</span>
+              <span class="friends__section--name">Friends' Names Display</span>
             </div>
           </div>
         </section>
