--- a/profile.html
+++ b/profile.html
@@ -23,17 +23,46 @@
             <i class="fab fa-bluetooth-b"></i>
             <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
           </div>
+        </div>
+
         <div class="header__bottom">
           <div class="header__column">
-            <i class="fas fa-times fa-lg"></i>
+            <a href="index.html">
+              <i class="fas fa-times fa-lg"></i>
+            </a>
           </div>
           <div class="header__column">
-
+            <!-- none icon-->
           </div>
           <div class="header__column">
             <i class="fas fa-user fa-lg"></i>
           </div>
         </div>
       </header>
+      <main class="profile">
+        <header class="profile__header">
+          <img src="images/avatar.jpg" alt="">
+          <h3 class="profile__header-title">Junsu Kim</h3>
+        </header>
+        <input type="text" placeholder="banjag954@naver.com">
+        <div class="profile__header-actions">
+          <div class="profile__action">
+            <span class="profile__action-circle">
+              <i class="fas fa-comment fa-2x"></i>
+            </span>
+            <span class="profile__action-title">
+              My Chatroom
+            </span>
+          </div>
+          <div class="profile__action">
+            <span class="profile__action-circle">
+              <i class="fas fa-pen fa-2x"></i>
+            </span>
+            <span class="profile__action-title">
+              Edit Profile
+            </span>
+          </div>
+        </div>
+      </main>
     </body>
     </html>
