--- a/chat.html
+++ b/chat.html
@@ -23,9 +23,12 @@
             <i class="fab fa-bluetooth-b"></i>
             <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
           </div>
+        </div>
         <div class="header__bottom">
           <div class="header__column">
-            <i class="fas fa-chevron-left fa-lg"></i>
+            <a href="chats.html">
+              <i class="fas fa-chevron-left fa-lg"></i>
+            </a>
           </div>
           <div class="header__column">
             <span class="header__text">Col Kim</span>
