--- a/find.html
+++ b/find.html
@@ -23,6 +23,7 @@
             <i class="fab fa-bluetooth-b"></i>
             <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
           </div>
+        </div>
         <div class="header__bottom">
           <div class="header__column">
             <span class="header__text">Edit</span>
