Finish_header & import font

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <header class="top-header">
         <div class="header__top">
           <div class="header__column">
-            <i class="fas fa-plane-departure"></i>
-            <i class="fas fa-wifi"></i>
+            <i class="fas fa-plane-departure fa-sm"></i>
+            <i class="fas fa-wifi fa-sm"></i>
           </div>
           <div class="header__column">
             <span class="header__time">18:38</span>
           </div>
           <div class="header__column">
-            <i class='fas fa-moon'></i>
-            <i class="fab fa-bluetooth-b"></i>
-            <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
+            <i class='fas fa-moon fa-sm'></i>
+            <i class="fab fa-bluetooth-b fa-sm"></i>
+            <span class="header__battery"> 66% <i class="fas fa-battery-quarter fa-sm"></i></span>
           </div>
         </div>
         <div class="header__bottom">
@@ -30,7 +30,7 @@
             <span class="header__text">Manager</span>
           </div>
           <div class="header__column">
-            <span class="header__text">Friends<span class="header__number">1</span></span>
+            <span class="header__text">Friends <span class="header__number">1</span></span>
           </div>
           <div class="header__column">
             <i class='fa fa-cog fa-lg'></i>
