--- a/more.html
+++ b/more.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-  <html lang="en" dir="ltr">
+  <html lang="en">
     <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, user-scalable=no">
+      <meta name="viewport" content="width=device-width, user-scalable=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <!-- Fontawesome Icons css -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -13,16 +13,16 @@
       <header class="top-header">
         <div class="header__top">
           <div class="header__column">
-            <i class="fas fa-plane-departure"></i>
-            <i class="fas fa-wifi"></i>
+            <i class="fas fa-plane-departure fa-sm"></i>
+            <i class="fas fa-wifi fa-sm"></i>
           </div>
           <div class="header__column">
             <span class="header__time">18:38</span>
           </div>
           <div class="header__column">
             <i class='fas fa-moon'></i>
-            <i class="fab fa-bluetooth-b"></i>
-            <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
+            <i class="fab fa-bluetooth-b fa-sm"></i>
+            <span class="header__battery fa-sm">66% <i class="fas fa-battery-quarter fa-sm"></i></span>
           </div>
         </div>
         <div class="header__bottom">
