--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,10 @@
           <div class="header__column">
             <i class='fas fa-moon'></i>
             <i class="fab fa-bluetooth-b"></i>
-            <span class="header__battery">66%<i class="fas fa-battery-quarter"></i></span>
+            <span class="header__battery">
+              66%
+              <i class="fas fa-battery-quarter"></i>
+            </span>
           </div>
         </div>
 
