css__index_finish

--- a/chats.html
+++ b/chats.html
@@ -30,7 +30,7 @@
             <span class="header__text">Edit</span>
           </div>
           <div class="header__column">
-            <span class="header__text">Chats<i class="fas fa-chevron-down"></i></span>
+            <span class="header__text">Chats <i class="fas fa-chevron-down fa-sm"></i></span>
           </div>
           <div class="header__column">
 
