--- a/index.html
+++ b/index.html
@@ -43,34 +43,36 @@
           <i class="fas fa-search"></i>
           <input type="text" placeholder="Find friends, chats, Plus Friends">
         </div>
-        <section class=friends__section>
-          <h6 class="friends__section--title">My Profile</h6>
+        <section class="friends__section">
+          <header class="friends__section--header">
+            <h6 class="friends__section--title">My Profile</h6>
+          </header>
           <div class="friends__section--rows">
             <div class="friends__section--row">
-              <a href="profile.html">
-                <img src="" alt="">
-                <span class="friends__section--name">Junsu Kim</span>
+              <img src="images/avatar.jpg" alt="">
+              <a href="profile.html" class="friends__section--name">
+                Junsu Kim
               </a>
             </div>
             <div class="friends__section--row">
-              <img src="" alt="">
+              <img src="images/avatar.jpg" alt="">
               <span class="friends__section--name">Friends' Names Display</span>
             </div>
           </div>
         </section>
         <section class="friends__section">
-          <h6 class="friends__section--title">Friends</h6>
+          <header class="friends__section--header">
+            <h6 class="friends__section--title">Friends</h6>
+          </header>
           <div class="friends__section--rows">
-            <div class="friends__section--row">
+            <div class="friends__section--row width--tagline">
               <div class="friends__section--column">
-                <img src="" alt="">
+                <img src="images/avatar.jpg" alt="">
                 <span class="friends__section--name">Junsu Kim</span>
               </div>
               <span class="friends__section--tagline">
-                Life is short, so live your life.
+                <p>Life is short, so live your life.</p>
               </span>
-
-              </div>
             </div>
           </div>
         </section>
