--- a/find.html
+++ b/find.html
@@ -48,8 +48,8 @@
             <i class="fas fa-qrcode fa-lg"></i>
             <span class="find__option--title">QR Code</span>
           </div>
-          <div class="find__option fa-2x">
-            <i class="fas fa-mobile-alt"></i>
+          <div class="find__option">
+            <i class="fas fa-mobile-alt fa-lg"></i>
             <span class="find__option--title">Shake</span>
           </div>
           <div class="find__option">
@@ -60,10 +60,10 @@
         <section class="find__recommended">
             <header>
               <h6 class="recommended__title">Recommended Friends</h6>
-              <div class="recommended__none">
-                <span class="recommended__text">You have no recommended friends.</span>
-              </div>
             </header>
+            <div class="recommended__none">
+              <span class="recommended__text">You have no recommended friends.</span>
+            </div>
         </section>
 
       </main>
