--- a/more.html
+++ b/more.html
@@ -39,20 +39,25 @@
       </header>
 
       <main class="more">
-          <header class="more__header">
-            <div class="more__header__profile">
-              <img src="images/avatar.jpg" alt="">
-              <div class="more__header__info">
-                <h3 class="header__title">
-                  Columbus(Junsu) Kim
-                </h3>
-                <span class="more__header__subtitle">
-                  banjag954@naver.com
-                </span>
-              </div>
+        <div class="search-bar">
+          <i class="fas fa-search"></i>
+          <input type="text" placeholder="Find friends, chats, Plus Friends">
+        </div>
+
+        <header class="more__header">
+          <div class="more__header__profile">
+            <img src="images/avatar.jpg" alt="">
+            <div class="more__header__info">
+              <h3 class="header__title">
+                Columbus(Junsu) Kim
+              </h3>
+              <span class="more__header__subtitle">
+                banjag954@naver.com
+              </span>
             </div>
-            <i class="fas fa-comment fa-2x"></i>
-          </header>
+          </div>
+          <i class="far fa-comment-alt fa-2x"></i>
+        </header>
 
           <section class="more__options">
             <div class="more__option">
@@ -165,7 +170,7 @@
             </div>
           </section>
 
-      </main>
+    </main>
 
       <nav class="top__bar">
         <a href="index.html" class="top__bar__tab">
