css__more_finish

--- a/more.html
+++ b/more.html
@@ -99,7 +99,7 @@
 
             <div class="plus-friends__items">
               <div class="plus-friends__item">
-                <i class="fas fa-utensils"></i>
+                <i class="fas fa-cookie-bite"></i>
                 <div class="plus-friends__item--title">
                   Order
                 </div>
@@ -149,28 +149,28 @@
             </div>
           </section>
 
-          <section class="more__options">
+          <section class="more__links">
             <div class="more__option">
               <img src="images/kakaoStory.png" alt="kakaoStory" class="more__option--image">
-              <span class="more__option--title">
-                KaKao Story
+              <span class="more__option-title">
+                KaKao</br>Story
               </span>
             </div>
             <div class="more__option">
               <img src="images/path.png" alt="path" class="more__option--image">
-              <span class="more__option--title">
+              <span class="more__option-title">
                 Path
               </span>
             </div>
             <div class="more__option">
               <img src="images/kakaoFriends.png" alt="kakaoFriends" class="more__option--image">
-              <span class="more__option--title">
-                KaKao Friends
+              <span class="more__option-title">
+                KaKao</br>Friends
               </span>
             </div>
           </section>
 
-    </main>
+      </main>
 
       <nav class="top__bar">
         <a href="index.html" class="top__bar__tab">
