css_profile_finish

--- a/more.html
+++ b/more.html
@@ -113,7 +113,7 @@
               <div class="plus-friends__item">
                 <i class="fas fa-tv"></i>
                 <div class="plus-friends__item--title">
-                  TV Channel/Radio...
+                  TV Channel/Radio
                 </div>
               </div>
               <div class="plus-friends__item">
