--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-      <header class="top-header">
+      <header class="top-header top-header--transparent">
         <div class="header__top">
           <div class="header__column">
             <i class="fas fa-plane-departure"></i>
@@ -43,28 +43,38 @@
           </div>
         </div>
       </header>
+
       <main class="profile">
         <header class="profile__header">
-          <img src="images/avatar.jpg" alt="">
-          <h3 class="profile__header-title">Junsu Kim</h3>
-        </header>
-        <input type="text" placeholder="banjag954@naver.com">
-        <div class="profile__header-actions">
-          <div class="profile__action">
-            <span class="profile__action-circle">
-              <i class="fas fa-comment fa-2x"></i>
-            </span>
-            <span class="profile__action-title">
-              My Chatroom
-            </span>
+          <div class="profile__header-container">
+            <img src="images/avatar.jpg" alt="">
+            <h3 class="profile__header-title">Junsu Kim</h3>
           </div>
-          <div class="profile__action">
-            <span class="profile__action-circle">
-              <i class="fas fa-pen fa-2x"></i>
-            </span>
-            <span class="profile__action-title">
-              Edit Profile
-            </span>
+        </header>
+
+        <div class="profile__container">
+
+          <input type="text" placeholder="banjag954@naver.com">
+
+          <div class="profile__actions">
+
+            <div class="profile__action">
+              <span class="profile__action-circle">
+                <i class="fas fa-comment fa-lg"></i>
+              </span>
+              <span class="profile__action-title">
+                My Chatroom
+              </span>
+            </div>
+
+            <div class="profile__action">
+              <span class="profile__action-circle">
+                <i class="fas fa-pen fa-lg"></i>
+              </span>
+              <span class="profile__action-title">
+                Edit Profile
+              </span>
+            </div>
           </div>
         </div>
       </main>
