css__images_change

--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
 
         <header class="more__header">
           <div class="more__header__profile">
-            <img src="images/avatar.jpg" alt="">
+            <img src="images/col.png" alt="">
             <div class="more__header__info">
               <h3 class="header__title">
                 Columbus(Junsu) Kim
