--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
           </header>
           <div class="friends__section--rows">
             <div class="friends__section--row">
-              <img src="images/avatar.jpg" alt="">
+              <img src="images/col.png" alt="">
               <a href="profile.html" class="friends__section--name">
                 Junsu Kim
               </a>
             </div>
             <div class="friends__section--row">
-              <img src="images/avatar.jpg" alt="">
+              <img src="images/talk.png" alt="">
               <span class="friends__section--name">Friends' Names Display</span>
             </div>
           </div>
@@ -68,7 +68,7 @@
             <div class="friends__section--row width--tagline">
               <div class="friends__section--column">
                 <img src="images/avatar.jpg" alt="">
-                <span class="friends__section--name">Junsu Kim</span>
+                <span class="friends__section--name">Col Kim</span>
               </div>
               <span class="friends__section--tagline">
                 <p>Life is short, so live your life.</p>
