--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
       <main class="profile">
         <header class="profile__header">
           <div class="profile__header-container">
-            <img src="images/avatar.jpg" alt="">
+            <img src="images/col.png" alt="">
             <h3 class="profile__header-title">Junsu Kim</h3>
           </div>
         </header>
