css__images_change_02

--- a/profile.html
+++ b/profile.html
@@ -53,9 +53,8 @@
         </header>
 
         <div class="profile__container">
-
-          <input type="text" placeholder="banjag954@naver.com">
-
+          <p>banjag954@naver.com</p>
+          <!-- <input type="text" placeholder="banjag954@naver.com"> -->
           <div class="profile__actions">
 
             <div class="profile__action">
