css_mediaQuery_finish

--- a/chats.html
+++ b/chats.html
@@ -375,5 +375,8 @@
           </a>
         </nav>
       </div>
+      <div class="bigScreenText">
+        <span>Please make your screen smaller</span>
+      </div>
     </body>
     </html>
