--- a/more.html
+++ b/more.html
@@ -198,5 +198,8 @@
           <span class="top__bar__title">More</span>
         </a>
       </nav>
+      <div class="bigScreenText">
+        <span>Please make your screen smaller</span>
+      </div>
     </body>
     </html>
